--- a/Changes
+++ b/Changes
@@ -4,6 +4,9 @@ Revision history for Log-Any-Adapter-Log-Dispatch
 
 0.02  Jul 11, 2009
 
+- Fix detection methods (is_debug, etc.)
+- Really test all methods and aliases
+
 0.01  Jul 11, 2009
 
 - Initial version
