--- a/Changes
+++ b/Changes
@@ -2,6 +2,8 @@ Revision history for Log-Any-Adapter-Dispatch
 
 ** denotes an incompatible change
 
+0.04  Jul 17, 2009
+
 0.03  Jul 17, 2009
 
 - Initial version
