--- a/Changes
+++ b/Changes
@@ -2,6 +2,8 @@ Revision history for Log-Any-Adapter-Dispatch
 
 ** denotes an incompatible change
 
+0.05  Sep 4, 2009
+
 0.04  Sep 4, 2009
 
 - Remove use of 'dp' from test
